<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2013-2020 Michael J Doyle
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_autorenew_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_about"
        app:showAsAction="never"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/menu_settings"
        app:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_rate"
        app:showAsAction="never"
        android:title="@string/menu_rate"/>
    <item
        android:id="@+id/menu_twitter"
        app:showAsAction="never"
        android:title="@string/menu_twitter"/>

</menu>
