<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2013-2020 Michael J Doyle

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#E5E5E5" >

    <LinearLayout
        android:id="@+id/fragment_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
            
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/listview_background"
            android:id="@+id/shutdown_form" >
    
            <TextView
                android:id="@+id/header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_light"
                android:textSize="22sp"
                android:text="@string/header_shutdown"
                android:layout_marginBottom="10dp" />
    
            <CheckBox
                android:id="@+id/checkbox_volume_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/header1"
                android:text="@string/label_volume_scan" />
    
            <CheckBox
                android:id="@+id/checkbox_fix_quotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox_volume_scan"
                android:text="@string/label_fix_quotas" />
    
            <View
                android:id="@+id/strut"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_below="@+id/checkbox_fix_quotas"
                android:layout_centerHorizontal="true" />
    
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignLeft="@id/strut"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/checkbox_fix_quotas"
                android:onClick="onClickRestart"
                android:text="@string/button_restart" />
    
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@id/strut"
                android:layout_below="@+id/checkbox_fix_quotas"
                android:onClick="onClickShutdown"
                android:text="@string/button_shutdown" />
        </RelativeLayout>
        
        <!--  space -->
        <TextView 
            android:layout_height="10dp"
            android:layout_width="match_parent" />
            
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/listview_background"
            android:id="@+id/wol_form" >
    
            <TextView
                android:id="@+id/header2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_light"
                android:textSize="22sp"
                android:text="@string/header_wake_on_lan"
                android:layout_marginBottom="10dp" />
    
            <CheckBox
                android:id="@+id/checkbox_send_as_broadcast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/header2"
                android:text="@string/label_send_as_broadcast" />
    
            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox_send_as_broadcast"
                android:orientation="horizontal" >
    
                <EditText
                    android:id="@+id/edittext_num_of_packets"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:paddingLeft="10dp"
                    android:text="@string/default_packets" >
                </EditText>
    
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/label_packets"
                    android:textAppearance="?android:attr/textAppearance"
                    android:textColor="?android:attr/textColorPrimary" />
            </LinearLayout>
    
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout1"
                android:orientation="horizontal" >
    
                <EditText
                    android:id="@+id/edittext_wol_port"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="5"
                    android:paddingLeft="10dp"
                    android:text="@string/default_wol_port" >
                </EditText>
    
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/label_wol_port"
                    android:textAppearance="?android:attr/textAppearance"
                    android:textColor="?android:attr/textColorPrimary" />
            </LinearLayout>
            
            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/linearLayout2"
                android:onClick="onClickWol"
                android:text="@string/button_wol" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
