<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2013-2020 Michael J Doyle

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <CheckBox
        android:id="@+id/checkbox_advertise_frontview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_bonjour_advertise_frontview"
        android:onClick="onClickAdvertiseFrontview" />

    <CheckBox
        android:id="@+id/checkbox_advertise_printers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox_advertise_frontview"
        android:text="@string/label_bonjour_advertise_printers"
        android:onClick="onClickAdvertisePrinters" />

    <CheckBox
        android:id="@+id/checkbox_advertise_afp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox_advertise_printers"
        android:text="@string/label_bonjour_advertise_afp"
        android:onClick="onClickAdvertiseAfp" />

</RelativeLayout>
